# test_server

./: .flake8  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
config/: __init__.py  asgi.py  logging.py  settings.py  urls.py  wsgi.py
config/celery/: config.py  handlers.py  tasks.py  utils.py
config/tools/: process_selected_tests_manager.py
config/utils/: misc.py
core/: admin.py  models.py
core/utils/: poetry_operations.py
docker/: docker-compose.yml  start.sh  stop.sh  up.sh
env/: .env.default
fixtures/: 005_users.json  010_groups.json
rest_api/: serializers.py  urls.py  views.py
static/admin/js/: testcase_admin.js
templates/admin/: project_change_form.html
test_cases/: admin.py  forms.py  models.py
users/: admin.py  manager.py  models.py
